--- a/src/static/css/base.css
+++ b/src/static/css/base.css
@@ -27,7 +27,7 @@ ul.messages li.info a { color:#1586de; }
 ul.messages li.warning { background:#de9404; }
 ul.messages li.warning a { color:#f49000; }
 
-ul.messages li a.close {
+ul.messages li a.btn-close {
     margin:0;
     float:right;
     opacity:1;
