--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% url 'cities:list_cities' as cities %}
 
 
 <!doctype html>
@@ -16,18 +17,18 @@
   <body>
   <div class="container">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand mx-3" href="{% url 'home' %}">Find Route</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                   aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
-                  <li class="nav-item active">
-                      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                  <li class="nav-item {% if request.path == cities %}active{% endif %}">
+                      <a class="nav-link" href="{% url 'cities:list_cities' %}">Города</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="#"></a>
+                      <a class="nav-link" href="{% url 'cities:create_city' %}">Добавить город</a>
                   </li>
                   {% if user.is_authenticated %}
                   <li class="nav-item">
@@ -57,20 +58,24 @@
   </div>
 
   <div class="container my-3">
-      <div>
+      <div class="row">
+        <div class="col-md-6 mx-auto">
           {% if messages %}
               <ul class="alert alert-dismissible messages fade show">
                   {% for message in messages %}
                       <li class="{{ message.tags }}">
                           {{ message|safe }}
-                          <button type="button" class="close" data-dismiss="alert" aria-label="Close">x</button>
+                          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                       </li>
                   {% endfor %}
               </ul>
           {% endif %}
+        </div>
       </div>
-      {% block content %}
-      {% endblock %}
+      <div class="container bg-light py-5">
+          {% block content %}
+          {% endblock %}
+      </div>
     <footer>
         <div class="container bg-dark py-5">
             <h4 class="font-italic text-center text-white">Find Route</h4>
@@ -81,7 +86,6 @@
         </div>
   </footer>
   </div>
-
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
           integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
