--- a/src/routes/templates/routes/routes_list.html
+++ b/src/routes/templates/routes/routes_list.html
@@ -9,9 +9,17 @@
                     <div class="card shadow mt-3">
                         <div class="card-body">
                             <h3 class="text-center font-italic">
-                                Маршрут{% if routes|length %}ы{% endif %} из г.{{ from_city }} в г.{{ to_city }}
+                                Маршрут{% if routes|length %}ы{% endif %} из г.{{ from_city.name }}
+                                в г.{{ to_city.name }}
                                 </h3>
                             {% for route in routes %}
+                                <form action="{% url 'add_route' %}" method="post">
+                                    {% csrf_token %}
+                                    <input type="hidden" name="from_city" value="{{ from_city.id }}">
+                                    <input type="hidden" name="to_city" value="{{ to_city.id }}">
+                                    <input type="hidden" name="travel_time" value="{{ route.total_time }}">
+                                    <input type="hidden" name="trains"
+                                           value="{% for train in route.trains %}{{ train.id }},{% endfor %}">
                                 <table class="table table-striped">
                                     <thead class="table-primary">
                                     <tr>
@@ -30,6 +38,8 @@
                                     {% endfor %}
                                     </tbody>
                                 </table>
+                                <button type="submit" class="btn btn-sm btn-info mb-3">Сохранить</button>
+                                </form>
                             {% endfor %}
                         </div>
                     </div>
