--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -32,6 +32,9 @@
                   <li class="nav-item {% if request.path == trains %}active{% endif %}">
                       <a class="nav-link" href="{% url 'trains:list_trains' %}">Поезда</a>
                   </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="{% url 'list' %}">Маршруты</a>
+                  </li>
                   <li class="nav-item dropdown">
                       <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink"
                          role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -40,9 +43,6 @@
                           <li><a class="dropdown-item" href="{% url 'cities:create_city' %}">Добавить город</a></li>
                           <li><a class="dropdown-item" href="{% url 'trains:create_train' %}">Добавить поезд</a></li>
                       </ul>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="#"></a>
                   </li>
                   <li class="nav-item">
                       <a class="nav-link" href="#"></a>
