--- a/src/trains/templates/trains/update_train.html
+++ b/src/trains/templates/trains/update_train.html
@@ -3,6 +3,36 @@
 {% block title %}Обновление записи о поезде{% endblock %}
 
 {% block content %}
-    <h5 class="card-text text-center mt-3">Обновление записи о поезде №{{ object.name }}</h5>
-    {% include 'form.html' with button='Обновить' %}
+    <div class="row">
+        <div class="col-md-6 mx-auto">
+            <div class="card shadow mt-4">
+                <div class="card-body">
+                <h5 class="card-text text-center font-italic">Обновление записи о поезде №{{ object.name }}</h5>
+                    <form action="" method="post">
+                        {% csrf_token %}
+                        {% for field in form %}
+                            <div class="fieldWrapper">
+                            {% if field.errors %}
+                                <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                                    {% for error in field.errors %}
+                                        {{ error }}
+                                    {% endfor %}
+                                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                                </div>
+                            {% endif %}
+                                {{ field.label_tag }} {{ field }}
+                                {% if field.help_text %}
+                                    <p class="help">{{ field.help_text|safe }}</p>
+                                {% endif %}
+                            </div>
+                        {% endfor %}
+                        <input class="btn btn-info mt-3" type="submit" value="Обновить">
+                        <a href="{% url 'trains:list_trains' %}">
+                            <button type="button" class="btn btn-outline-secondary mt-3 mx-2">Наза к списку</button>
+                        </a>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
