--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,6 +1,4 @@
 {% load static %}
-{% url 'cities:list_cities' as cities %}
-{% url 'trains:list_trains' as trains %}
 
 
 <!doctype html>
@@ -18,48 +16,57 @@
   </head>
   <body>
   <div class="container">
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-          <a class="navbar-brand mx-3" href="{% url 'home' %}">Find Route</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                  aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                  <li class="nav-item {% if request.path == cities %}active{% endif %}">
-                      <a class="nav-link" href="{% url 'cities:list_cities' %}">Города</a>
-                  </li>
-                  <li class="nav-item {% if request.path == trains %}active{% endif %}">
-                      <a class="nav-link" href="{% url 'trains:list_trains' %}">Поезда</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="{% url 'list' %}">Маршруты</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink"
-                         role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Добавить</a>
-                      <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                          <li><a class="dropdown-item" href="{% url 'cities:create_city' %}">Добавить город</a></li>
-                          <li><a class="dropdown-item" href="{% url 'trains:create_train' %}">Добавить поезд</a></li>
+      <nav class="navbar navbar-dark bg-dark">
+          <div class="container-fluid">
+              <a class="navbar-brand" href="{% url 'home' %}">Find Route</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                      data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                  <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                  <div class="offcanvas-header bg-secondary">
+                      <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
+                          {% if user.is_authenticated %}
+                              <span class="font-italic">Привет, {{ user.username }}</span>
+                          {% else %}
+                              <span class="font-italic">Find Route</span>
+                          {% endif %}
+                      </h5>
+                      <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                  </div>
+                  <div class="offcanvas-body bg-secondary">
+                      <ul class="navbar-nav justify-content-end flex-grow-1">
+                          <li class="nav-item">
+                              <a class="nav-link active" aria-current="page" href="{% url 'cities:list_cities' %}">Города</a>
+                          </li>
+                          <li class="nav-item">
+                              <a class="nav-link" href="{% url 'trains:list_trains' %}">Поезда</a>
+                          </li>
+                          <li class="nav-item">
+                              <a class="nav-link" href="{% url 'list' %}">Маршруты</a>
+                          </li>
+                          {% if user.is_authenticated %}
+                          <li class="nav-item dropdown">
+                              <a class="nav-link dropdown-toggle" href="#" id="offcanvasNavbarDropdown"
+                                 role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                  Добавить
+                              </a>
+                              <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
+                                  <li><a class="dropdown-item" href="{% url 'cities:create_city' %}">Добавить город</a></li>
+                                  <li><a class="dropdown-item" href="{% url 'trains:create_train' %}">Добавить поезд</a></li>
+                              </ul>
+                          </li>
+                          <li class="nav-item">
+                              <a class="nav-link" href="{% url 'accounts:logout' %}">Выйти</a>
+                          </li>
+                          {% else %}
+                              <li class="nav-item">
+                                  <a class="nav-link" href="{% url 'accounts:login' %}">Войти</a>
+                              </li>
+                          {% endif %}
                       </ul>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="#"></a>
-                  </li>
-                      <li class="nav-item">
-                          <a class="nav-link" href="#"></a>
-                      </li>
-
-                  <li class="nav-item">
-                      <a class="nav-link" href="#"></a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="#"></a>
-                  </li>
-
-
-              </ul>
+                  </div>
+              </div>
           </div>
       </nav>
   </div>
