added registration system

--- a/src/accounts/templates/accounts/login_form.html
+++ b/src/accounts/templates/accounts/login_form.html
@@ -27,7 +27,7 @@
                             </div>
                         {% endfor %}
                         <input class="btn btn-info mt-3" type="submit" value="Войти">
-                        <a href="#">
+                        <a href="{% url 'accounts:registration' %}">
                             <button type="button" class="btn btn-outline-secondary mt-3 mx-2">Зарегистрироваться</button>
                         </a>
                     </form>
