--- a/src/routes/templates/routes/create.html
+++ b/src/routes/templates/routes/create.html
@@ -10,6 +10,14 @@
                 <h5 class="card-text text-center font-italic">Создание маршрута</h5>
                     <form action="{% url 'save_route' %}" method="post">
                         {% csrf_token %}
+                        {% if form.non_field_errors %}
+                            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                                {% for error in form.non_field_errors%}
+                                    {{ error }}
+                                {% endfor %}
+                                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                            </div>
+                        {% endif %}
                         {% for field in form %}
                             <div class="fieldWrapper">
                             {% if field.errors %}
